--- a/.github/workflows/main_afrikanfintech.yml
+++ b/.github/workflows/main_afrikanfintech.yml
@@ -3,6 +3,7 @@
 
 name: Build and deploy Node.js app to Azure Web App - afrikanfintech
 
+
 on:
   push:
     branches:
@@ -40,11 +41,17 @@ jobs:
     needs: build
     
     steps:
+
+       
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+          
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+         creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -52,4 +59,5 @@ jobs:
           app-name: 'afrikanfintech'
           slot-name: 'Production'
           package: .
+
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_48316734A7104CCC916EC0F58D439C09 }}
